# phonetic

./: Cargo.toml  package-lock.json  package.json
front/: index.html  server.js  style.css
src/: main.rs  mapping.rs
